Updated Troubleshooting Memory Use (markdown)